--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,12 +212,13 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   background: url("../img/hero-final.jpg") top center;
+  background-size: cover;
   
 }
 
 #hero:before {
   content: "";
-  background: rgba(54, 62, 73, 0.3);
+  background: rgba(54, 62, 73, 0.10);
   position: absolute;
   bottom: 0;
   top: 0;
